h3 and p tag added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div class="pcScreen">
+        <h3>Image Slider</h3>
         <div id="imageContainer"></div>
+        <p>@copyright-Varun-the-Virus</p>
     </div>
 
     <script type="text/javascript" src="script.js"></script>
